tests/fixtures/invalid/missing_selector.etcm
spec BadRef:
  model: ModelConfig

impl default:
  $model: missing.etcm#default
